# ufabc-aedi-proj

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: armazenamento.c  armazenamento.h  classificacao.c  classificacao.h  main.c  validacao.c  validacao.h
src/lib/: avl.c  avl.h  cliente.c  cliente.h  decisao.c  decisao.h  example.c  example.h  list.c  list.h
test/: avl_test.c  cliente_test.c  decisao_test.c  example_test.c  list_test.c
